--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = [ "Alexander Terenin, Mans Magnusson, Kunal Sarkleh and collaborators"
 clap = "~2.19.0"
 libc = "0.2.0"
 rand = "0.3"
+lazy_static = "0.2"
